GNOME Bugzilla – Bug 657083
The header langinfo.h is not available on all systems
Last modified: 2011-08-23 02:03:35 UTC
Created attachment 194378 [details] [review] Check for langinfo.h and only include it when available Hi, It appears that recent updates to glib/gdatetime.c includes langinfo.h which is not available on all systems/compilers, including MinGW (native Windows, I do not know about the MinGW cross compiler on Linux) and Visual C++. This attempts to add a check for langinfo.h during ./configure and to update glib/gdatetime.c to only include langinfo.h if it is found. p.s.: Please let me know if I could simply use HAVE_LANGINFO_TIME for the check macro to include langinfo.h instead, without any changes to configure.ac, as it seems to me that header was used for calls encased by #ifdef HAVE_LANGINFO_TIME. Thank you, and God bless!
Just using HAVE_LANGINFO_TIME would be preferable, I think